--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI飲食店レコメンド</title>
+    <title>店舗カードの表示</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
@@ -81,21 +81,7 @@
 
     <!-- メインコンテンツ -->
     <div class="max-w-md mx-auto">
-        <h1 class="text-3xl font-bold text-center text-gray-900 my-8">AI飲食店レコメンド</h1>
-
-        <!-- ユーザー入力セクション -->
-        <div class="bg-white rounded-xl shadow-lg p-6 mb-8">
-            <h2 class="text-xl font-bold text-gray-800 mb-4">どんなお店をお探しですか？</h2>
-            <textarea id="prompt-input" rows="4" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600 mb-4" placeholder="例：記念日にぴったりの落ち着いた雰囲気のフレンチレストラン、友人との気軽なランチ、辛いものが食べたい、など"></textarea>
-            <button id="generate-btn" class="w-full bg-purple-600 text-white font-bold py-3 rounded-lg shadow-md hover:bg-purple-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-opacity-50">
-                レコメンドを生成
-            </button>
-        </div>
-
-        <!-- ローディングインジケーター -->
-        <div id="loading-spinner" class="hidden flex justify-center items-center h-48">
-            <div class="animate-spin rounded-full h-16 w-16 border-t-2 border-b-2 border-purple-500"></div>
-        </div>
+        <h1 class="text-3xl font-bold text-center text-gray-900 my-8">店舗カードの表示</h1>
 
         <!-- 各日のレコメンド -->
         <div id="recommendations"></div>
@@ -139,104 +125,104 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const generateBtn = document.getElementById('generate-btn');
-            const promptInput = document.getElementById('prompt-input');
             const recommendationsDiv = document.getElementById('recommendations');
-            const loadingSpinner = document.getElementById('loading-spinner');
             const modalContainer = document.getElementById('modal-container');
             const modalContent = document.getElementById('modal-content');
             const closeModalBtn = document.getElementById('close-modal');
-            let restaurants = [];
-            let modalCurrentSlide = 0;
-
-            const apiKey = "";
-
-            async function generateRecommendations(userPrompt) {
-                recommendationsDiv.innerHTML = '';
-                loadingSpinner.classList.remove('hidden');
-                generateBtn.disabled = true;
-
-                // ユーザー入力が空欄の場合、デフォルトのプロンプトを使用
-                const actualPrompt = userPrompt.trim() || "日本の実在する店舗で、現在営業中の人気飲食店";
-
-                // プロンプトを修正し、Google検索結果に基づいて店舗情報を生成するように明確に指示
-                const textPrompt = `ユーザーの希望: "${actualPrompt}"
-                この希望に基づいて、**現在営業中**の**日本の実在する店舗**をGoogle検索で探し、**合計6件（3日間のランチとディナー）**の飲食店レコメンドプランを策定してください。
-                **最重要：店舗名は絶対に生成しないでください。検索結果に存在する実在する店舗名をそのまま引用してください。**
-                店舗名、住所、価格帯、営業時間などの店舗情報は、検索で取得した情報を**完全にそのまま利用し、架空の情報を一切混ぜないでください。**
-                また、各店舗について、**3枚のプレースホルダー画像URL**を\`images\`というキーの配列として返してください。
-                各店舗は以下のJSONスキーマに従って日本語で記述し、**必ず6つのオブジェクトを含む配列を返してください。**
-                **注意：AIが生成した情報ですので、必ず公式サイトなどで正確な情報をご確認ください。**
-
+            
+            // AIによる生成部分を削除し、表示用のサンプルデータを直接定義
+            const restaurants = [
                 {
-                    "type": "ARRAY",
-                    "items": {
-                        "type": "OBJECT",
-                        "properties": {
-                            "day": { "type": "NUMBER" },
-                            "meal": { "type": "STRING" },
-                            "name": { "type": "STRING" },
-                            "highlight": { "type": "STRING" },
-                            "genre": { "type": "STRING" },
-                            "address": { "type": "STRING" },
-                            "price": { "type": "STRING" },
-                            "hours": { "type": "STRING" },
-                            "images": { "type": "ARRAY", "items": { "type": "STRING" } }
-                        }
-                    }
-                }`;
-                const chatHistory = [{ role: "user", parts: [{ text: textPrompt }] }];
-                const payload = {
-                    contents: chatHistory,
-                    generationConfig: {
-                        responseMimeType: "application/json",
-                        responseSchema: {
-                            type: "ARRAY",
-                            items: {
-                                type: "OBJECT",
-                                properties: {
-                                    "day": { "type": "NUMBER" },
-                                    "meal": { "type": "STRING" },
-                                    "name": { "type": "STRING" },
-                                    "highlight": { "type": "STRING" },
-                                    "genre": { "type": "STRING" },
-                                    "address": { "type": "STRING" },
-                                    "price": { "type": "STRING" },
-                                    "hours": { "type": "STRING" },
-                                    "images": { "type": "ARRAY", "items": { "type": "STRING" } }
-                                }
-                            }
-                        }
-                    }
-                };
-                const textApiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
-
-                try {
-                    const textResponse = await fetch(textApiUrl, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(payload)
-                    });
-                    if (!textResponse.ok) {
-                        throw new Error(`HTTP error! status: ${textResponse.status}`);
-                    }
-                    const textResult = await textResponse.json();
-                    
-                    if (textResult.candidates && textResult.candidates.length > 0) {
-                        const jsonText = textResult.candidates[0].content.parts[0].text;
-                        restaurants = JSON.parse(jsonText);
-                        renderRecommendations(restaurants);
-                    } else {
-                        throw new Error('API response format is unexpected.');
-                    }
-                } catch (error) {
-                    console.error('Error generating recommendations:', error);
-                    recommendationsDiv.innerHTML = '<p class="text-center text-red-500">レコメンドの生成に失敗しました。もう一度お試しください。</p>';
-                } finally {
-                    loadingSpinner.classList.add('hidden');
-                    generateBtn.disabled = false;
+                    "day": 1,
+                    "meal": "ランチ",
+                    "name": "築地 寿司清 本店",
+                    "highlight": "新鮮なネタと職人の技が光る老舗の寿司店。",
+                    "genre": "寿司",
+                    "address": "東京都中央区築地4-13-9",
+                    "price": "ランチ: ¥3,000〜",
+                    "hours": "平日 10:30-14:00, 16:30-22:00",
+                    "images": [
+                        "https://placehold.co/600x400/b3e0f2/000000?text=Sushi+Image+1",
+                        "https://placehold.co/600x400/96d4ed/000000?text=Sushi+Image+2",
+                        "https://placehold.co/600x400/80c2e3/000000?text=Sushi+Image+3"
+                    ]
+                },
+                {
+                    "day": 1,
+                    "meal": "ディナー",
+                    "name": "神楽坂 石かわ",
+                    "highlight": "洗練された日本料理を堪能できる、予約困難な名店。",
+                    "genre": "日本料理",
+                    "address": "東京都新宿区神楽坂5-37 高村ビル5F",
+                    "price": "ディナー: ¥40,000〜",
+                    "hours": "17:30-23:00 (L.O. 21:00)",
+                    "images": [
+                        "https://placehold.co/600x400/e0b3e3/000000?text=Japanese+Cuisine+1",
+                        "https://placehold.co/600x400/d496e0/000000?text=Japanese+Cuisine+2",
+                        "https://placehold.co/600x400/c280e3/000000?text=Japanese+Cuisine+3"
+                    ]
+                },
+                {
+                    "day": 2,
+                    "meal": "ランチ",
+                    "name": "東京ラーメン ストリート 六厘舎",
+                    "highlight": "濃厚なつけ汁と極太麺が絶妙に絡み合う、つけ麺の有名店。",
+                    "genre": "ラーメン",
+                    "address": "東京都千代田区丸の内1-9-1 東京駅一番街 B1",
+                    "price": "ランチ: ¥1,000〜",
+                    "hours": "7:30-9:30, 10:30-23:00",
+                    "images": [
+                        "https://placehold.co/600x400/b3d2f2/000000?text=Ramen+Image+1",
+                        "https://placehold.co/600x400/96c4ed/000000?text=Ramen+Image+2",
+                        "https://placehold.co/600x400/80b6e3/000000?text=Ramen+Image+3"
+                    ]
+                },
+                {
+                    "day": 2,
+                    "meal": "ディナー",
+                    "name": "銀座 アスター 本店",
+                    "highlight": "洗練された空間で、伝統的な中華料理を味わえる。",
+                    "genre": "中華料理",
+                    "address": "東京都中央区銀座3-5-1",
+                    "price": "ディナー: ¥8,000〜",
+                    "hours": "11:00-22:00 (L.O. 21:30)",
+                    "images": [
+                        "https://placehold.co/600x400/d2e3b3/000000?text=Chinese+Cuisine+1",
+                        "https://placehold.co/600x400/c4ed96/000000?text=Chinese+Cuisine+2",
+                        "https://placehold.co/600x400/b6e380/000000?text=Chinese+Cuisine+3"
+                    ]
+                },
+                {
+                    "day": 3,
+                    "meal": "ランチ",
+                    "name": "資生堂パーラー 銀座本店",
+                    "highlight": "美しい内装と丁寧なサービスで、特別な時間を過ごせる洋食レストラン。",
+                    "genre": "洋食",
+                    "address": "東京都中央区銀座8-8-3",
+                    "price": "ランチ: ¥5,000〜",
+                    "hours": "11:30-21:30 (L.O. 20:30)",
+                    "images": [
+                        "https://placehold.co/600x400/e3b3c2/000000?text=Western+Cuisine+1",
+                        "https://placehold.co/600x400/ed96b4/000000?text=Western+Cuisine+2",
+                        "https://placehold.co/600x400/e3809c/000000?text=Western+Cuisine+3"
+                    ]
+                },
+                {
+                    "day": 3,
+                    "meal": "ディナー",
+                    "name": "焼肉 ジャンボ はなれ",
+                    "highlight": "希少部位を堪能できる、焼肉好きにはたまらない名店。",
+                    "genre": "焼肉",
+                    "address": "東京都文京区本郷3-28-9",
+                    "price": "ディナー: ¥10,000〜",
+                    "hours": "17:00-24:00 (L.O. 23:00)",
+                    "images": [
+                        "https://placehold.co/600x400/b3c2e3/000000?text=Yakiniku+1",
+                        "https://placehold.co/600x400/96b4ed/000000?text=Yakiniku+2",
+                        "https://placehold.co/600x400/809ce3/000000?text=Yakiniku+3"
+                    ]
                 }
-            }
+            ];
 
             // カルーセルをスライドさせる関数
             function slideCarousel(carouselTrack, direction) {
@@ -370,10 +356,8 @@
                 }
             });
 
-            generateBtn.addEventListener('click', () => {
-                const userPrompt = promptInput.value.trim();
-                generateRecommendations(userPrompt);
-            });
+            // ページ読み込み時に店舗カードを表示
+            renderRecommendations(restaurants);
         });
     </script>
 </body>
